feat: Flyway 도입 및 tb_ 접두사 기반 논리적 스키마 구축 (V1 완성)